re-run w01 and w02 nb from C03

--- a/C03/w01/C03w01_nb_pa.ipynb
+++ b/C03/w01/C03w01_nb_pa.ipynb
@@ -387,7 +387,7 @@
     }
    ],
    "source": [
-    "products['sentiment'] = products['rating'].apply(lambda rating : +1 if rating > 3 else -1)\n",
+    "products['sentiment'] = products['rating'].apply(lambda rating: +1 if rating > 3 else -1)\n",
     "products.head(5)"
    ]
   },
@@ -459,32 +459,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "took: 5719.062ms\n"
+      "took: 5528.400ms\n"
      ]
     }
    ],
    "source": [
     "@time_it\n",
-    "def load_data(datasrc):\n",
+    "def run_model(datasrc):\n",
     "  return turicreate.logistic_classifier.create(datasrc,\n",
     "                                               target='sentiment',\n",
     "                                               features=['word_count'],\n",
     "                                               validation_set=None,\n",
     "                                               verbose=False)\n",
     "\n",
-    "sentiment_model = load_data(train_data)"
+    "sentiment_model = run_model(train_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -512,7 +512,7 @@
        "Solver                         : lbfgs\n",
        "Solver iterations              : 5\n",
        "Solver status                  : TERMINATED: Terminated due to numerical difficulties.\n",
-       "Training time (sec)            : 1.2738\n",
+       "Training time (sec)            : 1.2076\n",
        "\n",
        "Settings\n",
        "--------\n",
@@ -524,7 +524,7 @@
        "word_count[conclusions]        : 21.6818\n",
        "word_count[torsional]          : 21.6818\n",
        "word_count[geeeezzz]           : 21.6818\n",
-       "word_count[inversely]          : 21.6818\n",
+       "word_count[articletest]        : 21.6818\n",
        "\n",
        "Lowest Negative Coefficients\n",
        "----------------------------\n",
@@ -535,7 +535,7 @@
        "word_count[nonclogged]         : -21.8302"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
        "(['name', 'index', 'class', 'value', 'stderr'], 121713)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
        "91073"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
        "[3 rows x 5 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
        "[5.0, 2.0, 1.0]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
        "'Absolutely love it and all of the Scripture in it.  I purchased the Baby Boy version for my grandson when he was born and my daughter-in-law was thrilled to receive the same book again.'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +796,7 @@
        "'Would not purchase again or recommend. The decals were thick almost plastic like and were coming off the wall as I was applying them! The would NOT stick! Literally stayed stuck for about 5 minutes then started peeling off.'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -828,10 +828,10 @@
       "text/plain": [
        "dtype: float\n",
        "Rows: 3\n",
-       "[4.788907309213887, -3.0007822224618668, -8.188501360762814]"
+       "[4.788907309213859, -3.000782222461771, -8.188501360762801]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
        "[1, -1, -1]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +930,7 @@
        "array([9.91747131e-01, 4.73905475e-02, 2.77752771e-04])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -961,10 +961,10 @@
       "text/plain": [
        "dtype: float\n",
        "Rows: 3\n",
-       "[0.9917471313286874, 0.047390547487150894, 0.00027775277121724846]"
+       "[0.9917471313286872, 0.04739054748715523, 0.00027775277121725193]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +999,7 @@
        "turicreate.data_structures.sarray.SArray"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1026,7 @@
        "2"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1130,7 @@
        "[5 rows x 5 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1235,33 +1235,33 @@
       "+-------------------------------+------------------------+\n",
       "|              name             |         proba          |\n",
       "+-------------------------------+------------------------+\n",
-      "| Luna Lullaby Bosom Baby Nu... | 3.229790842332933e-63  |\n",
-      "| The First Years True Choic... | 1.6322823186470756e-24 |\n",
-      "| Jolly Jumper Arctic Sneak ... | 8.110311382044355e-20  |\n",
-      "| Motorola MBP36 Remote Wire... | 7.797281605622953e-16  |\n",
-      "| VTech Communications Safe ... | 1.8411614798424945e-14 |\n",
-      "| Fisher-Price Ocean Wonders... | 6.345094941889488e-14  |\n",
-      "| Levana Safe N'See Digital ... |  6.57852851306363e-14  |\n",
-      "| Safety 1st High-Def Digita... | 1.5408410011844779e-13 |\n",
-      "| Snuza Portable Baby Moveme... | 6.301835289107039e-13  |\n",
-      "| Adiri BPA Free Natural Nur... | 9.314560905875045e-13  |\n",
-      "| Samsung SEW-3037W Wireless... | 5.920602970090121e-12  |\n",
-      "| Motorola Digital Video Bab... | 5.9862008499500074e-12 |\n",
-      "| Cloth Diaper Sprayer--styl... | 1.0091402072272283e-11 |\n",
-      "| Munchkin Nursery Projector... | 3.4551832745597654e-11 |\n",
-      "| VTech Communications Safe ... | 4.432801716970209e-11  |\n",
-      "| Carter's Monkey Bars Music... | 4.6694553358617105e-11 |\n",
-      "| Safety 1st Lift Lock and S... | 1.0383337454037595e-10 |\n",
-      "| MyLine Eco baby play mat-A... | 2.0250237927048003e-10 |\n",
-      "|    Fisher-Price Royal Potty   | 3.9352573041114623e-10 |\n",
-      "| Evenflo Take Me Too Premie... |   4.829851675099e-10   |\n",
-      "| Prince Lionheart Warmies W... | 5.701410463832208e-10  |\n",
-      "| Evenflo Comfort Select Per... | 6.202981719960063e-10  |\n",
-      "| Angelcare Baby Sound Monit... | 7.215289744609136e-10  |\n",
-      "| Safety 1st Exchangeable Ti... | 7.697537613112083e-10  |\n",
-      "| Levana BABYVIEW20 Interfer... | 1.1699033083610584e-09 |\n",
-      "| Today's Baby&reg; Sarasota... | 1.1738022230097785e-09 |\n",
-      "| Peg-Perego Tatamia High Ch... | 1.3214319184592042e-09 |\n",
+      "| Luna Lullaby Bosom Baby Nu... | 3.229790842321183e-63  |\n",
+      "| The First Years True Choic... | 1.6322823186471684e-24 |\n",
+      "| Jolly Jumper Arctic Sneak ... |  8.11031138203306e-20  |\n",
+      "| Motorola MBP36 Remote Wire... | 7.797281605611318e-16  |\n",
+      "| VTech Communications Safe ... | 1.841161479839492e-14  |\n",
+      "| Fisher-Price Ocean Wonders... | 6.345094941890142e-14  |\n",
+      "| Levana Safe N'See Digital ... | 6.578528513061246e-14  |\n",
+      "| Safety 1st High-Def Digita... | 1.5408410011837334e-13 |\n",
+      "| Snuza Portable Baby Moveme... |  6.30183528909609e-13  |\n",
+      "| Adiri BPA Free Natural Nur... | 9.314560905886958e-13  |\n",
+      "| Samsung SEW-3037W Wireless... | 5.920602970082254e-12  |\n",
+      "| Motorola Digital Video Bab... | 5.986200849941288e-12  |\n",
+      "| Cloth Diaper Sprayer--styl... | 1.0091402072277123e-11 |\n",
+      "| Munchkin Nursery Projector... | 3.4551832745591023e-11 |\n",
+      "| VTech Communications Safe ... | 4.432801716964067e-11  |\n",
+      "| Carter's Monkey Bars Music... | 4.669455335857381e-11  |\n",
+      "| Safety 1st Lift Lock and S... | 1.0383337454040435e-10 |\n",
+      "| MyLine Eco baby play mat-A... | 2.0250237927021383e-10 |\n",
+      "|    Fisher-Price Royal Potty   | 3.9352573041105814e-10 |\n",
+      "| Evenflo Take Me Too Premie... | 4.829851675100116e-10  |\n",
+      "| Prince Lionheart Warmies W... | 5.701410463828987e-10  |\n",
+      "| Evenflo Comfort Select Per... | 6.202981719958366e-10  |\n",
+      "| Angelcare Baby Sound Monit... | 7.215289744607496e-10  |\n",
+      "| Safety 1st Exchangeable Ti... | 7.697537613113095e-10  |\n",
+      "| Levana BABYVIEW20 Interfer... | 1.169903308360331e-09  |\n",
+      "| Today's Baby&reg; Sarasota... | 1.173802223009203e-09  |\n",
+      "| Peg-Perego Tatamia High Ch... | 1.3214319184600163e-09 |\n",
       "+-------------------------------+------------------------+\n",
       "[27 rows x 2 columns]\n",
       "\n"
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {
     "scrolled": true
    },
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1349,7 +1349,7 @@
        "(0.9221862251019919, 0.92)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1381,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1390,7 +1390,7 @@
        "20"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1412,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1429,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1438,7 +1438,7 @@
        "'it came early and was not disappointed. i love planet wise bags and now my wipe holder. it keps my osocozy wipes moist and does not leak. highly recommend it.'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1456,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -1490,7 +1490,7 @@
        " 'moist': 1.0}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1508,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1517,7 @@
        "{'disappointed': 1.0, 'love': 1.0}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1542,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -1570,7 +1570,7 @@
        "Solver                         : newton\n",
        "Solver iterations              : 6\n",
        "Solver status                  : SUCCESS: Optimal solution found.\n",
-       "Training time (sec)            : 0.2588\n",
+       "Training time (sec)            : 0.2507\n",
        "\n",
        "Settings\n",
        "--------\n",
@@ -1593,7 +1593,7 @@
        "word_count_subset[money]       : -0.8979"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1616,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1625,7 +1625,7 @@
        "0.8693004559635229"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1643,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1775,7 +1775,7 @@
        "You can use print_rows(num_rows=m, num_columns=n) to print more rows and columns."
       ]
      },
-     "execution_count": 42,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1793,7 +1793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1845,7 +1845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1864,7 +1864,7 @@
        "  'car'])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1887,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1905,7 +1905,7 @@
        " ('car', True)]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1922,7 +1922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1931,7 +1931,7 @@
        "True"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1961,7 +1961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1970,7 +1970,7 @@
        "(0.976494573364514, 0.976)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1989,7 +1989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1998,7 +1998,7 @@
        "(0.8668150746537147, 0.867)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2024,7 +2024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2033,7 +2033,7 @@
        "(0.9221862251019919, 0.922)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2052,7 +2052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2061,7 +2061,7 @@
        "(0.8693004559635229, 0.869)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2091,7 +2091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2100,7 +2100,7 @@
        "(112164, 21252)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2122,7 +2122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 51,
    "metadata": {
     "scrolled": true
    },
@@ -2133,7 +2133,7 @@
        "(0.8427825773938085, 0.843)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
