--- a/C03/w02/C03w02_nb_pa1.ipynb
+++ b/C03/w02/C03w02_nb_pa1.ipynb
@@ -42,7 +42,7 @@
     "import sys\n",
     "sys.path.append(\"../common\")\n",
     "\n",
-    "from utils import time_it, assert_all, get_numpy_data"
+    "from utils import time_it, assert_all, get_numpy_data, load_important_words"
    ]
   },
   {
@@ -163,30 +163,215 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "\n",
-    "with open('../data/important_words.json', 'r') as f: # Reads the list of most frequent words\n",
-    "    important_words = json.load(f)\n",
-    "# important_words = [str(s) for s in important_words]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['baby', 'one', 'great', 'love', 'use', 'would', 'like', 'easy', 'little', 'seat', 'old', 'well', 'get', 'also', 'really', 'son', 'time', 'bought', 'product', 'good', 'daughter', 'much', 'loves', 'stroller', 'put', 'months', 'car', 'still', 'back', 'used', 'recommend', 'first', 'even', 'perfect', 'nice', 'bag', 'two', 'using', 'got', 'fit', 'around', 'diaper', 'enough', 'month', 'price', 'go', 'could', 'soft', 'since', 'buy', 'room', 'works', 'made', 'child', 'keep', 'size', 'small', 'need', 'year', 'big', 'make', 'take', 'easily', 'think', 'crib', 'clean', 'way', 'quality', 'thing', 'better', 'without', 'set', 'new', 'every', 'cute', 'best', 'bottles', 'work', 'purchased', 'right', 'lot', 'side', 'happy', 'comfortable', 'toy', 'able', 'kids', 'bit', 'night', 'long', 'fits', 'see', 'us', 'another', 'play', 'day', 'money', 'monitor', 'tried', 'thought', 'never', 'item', 'hard', 'plastic', 'however', 'disappointed', 'reviews', 'something', 'going', 'pump', 'bottle', 'cup', 'waste', 'return', 'amazon', 'different', 'top', 'want', 'problem', 'know', 'water', 'try', 'received', 'sure', 'times', 'chair', 'find', 'hold', 'gate', 'open', 'bottom', 'away', 'actually', 'cheap', 'worked', 'getting', 'ordered', 'came', 'milk', 'bad', 'part', 'worth', 'found', 'cover', 'many', 'design', 'looking', 'weeks', 'say', 'wanted', 'look', 'place', 'purchase', 'looks', 'second', 'piece', 'box', 'pretty', 'trying', 'difficult', 'together', 'though', 'give', 'started', 'anything', 'last', 'company', 'come', 'returned', 'maybe', 'took', 'broke', 'makes', 'stay', 'instead', 'idea', 'head', 'said', 'less', 'went', 'working', 'high', 'unit', 'seems', 'picture', 'completely', 'wish', 'buying', 'babies', 'won', 'tub', 'almost', 'either'] 193\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(['baby',\n",
+       "  'one',\n",
+       "  'great',\n",
+       "  'love',\n",
+       "  'use',\n",
+       "  'would',\n",
+       "  'like',\n",
+       "  'easy',\n",
+       "  'little',\n",
+       "  'seat',\n",
+       "  'old',\n",
+       "  'well',\n",
+       "  'get',\n",
+       "  'also',\n",
+       "  'really',\n",
+       "  'son',\n",
+       "  'time',\n",
+       "  'bought',\n",
+       "  'product',\n",
+       "  'good',\n",
+       "  'daughter',\n",
+       "  'much',\n",
+       "  'loves',\n",
+       "  'stroller',\n",
+       "  'put',\n",
+       "  'months',\n",
+       "  'car',\n",
+       "  'still',\n",
+       "  'back',\n",
+       "  'used',\n",
+       "  'recommend',\n",
+       "  'first',\n",
+       "  'even',\n",
+       "  'perfect',\n",
+       "  'nice',\n",
+       "  'bag',\n",
+       "  'two',\n",
+       "  'using',\n",
+       "  'got',\n",
+       "  'fit',\n",
+       "  'around',\n",
+       "  'diaper',\n",
+       "  'enough',\n",
+       "  'month',\n",
+       "  'price',\n",
+       "  'go',\n",
+       "  'could',\n",
+       "  'soft',\n",
+       "  'since',\n",
+       "  'buy',\n",
+       "  'room',\n",
+       "  'works',\n",
+       "  'made',\n",
+       "  'child',\n",
+       "  'keep',\n",
+       "  'size',\n",
+       "  'small',\n",
+       "  'need',\n",
+       "  'year',\n",
+       "  'big',\n",
+       "  'make',\n",
+       "  'take',\n",
+       "  'easily',\n",
+       "  'think',\n",
+       "  'crib',\n",
+       "  'clean',\n",
+       "  'way',\n",
+       "  'quality',\n",
+       "  'thing',\n",
+       "  'better',\n",
+       "  'without',\n",
+       "  'set',\n",
+       "  'new',\n",
+       "  'every',\n",
+       "  'cute',\n",
+       "  'best',\n",
+       "  'bottles',\n",
+       "  'work',\n",
+       "  'purchased',\n",
+       "  'right',\n",
+       "  'lot',\n",
+       "  'side',\n",
+       "  'happy',\n",
+       "  'comfortable',\n",
+       "  'toy',\n",
+       "  'able',\n",
+       "  'kids',\n",
+       "  'bit',\n",
+       "  'night',\n",
+       "  'long',\n",
+       "  'fits',\n",
+       "  'see',\n",
+       "  'us',\n",
+       "  'another',\n",
+       "  'play',\n",
+       "  'day',\n",
+       "  'money',\n",
+       "  'monitor',\n",
+       "  'tried',\n",
+       "  'thought',\n",
+       "  'never',\n",
+       "  'item',\n",
+       "  'hard',\n",
+       "  'plastic',\n",
+       "  'however',\n",
+       "  'disappointed',\n",
+       "  'reviews',\n",
+       "  'something',\n",
+       "  'going',\n",
+       "  'pump',\n",
+       "  'bottle',\n",
+       "  'cup',\n",
+       "  'waste',\n",
+       "  'return',\n",
+       "  'amazon',\n",
+       "  'different',\n",
+       "  'top',\n",
+       "  'want',\n",
+       "  'problem',\n",
+       "  'know',\n",
+       "  'water',\n",
+       "  'try',\n",
+       "  'received',\n",
+       "  'sure',\n",
+       "  'times',\n",
+       "  'chair',\n",
+       "  'find',\n",
+       "  'hold',\n",
+       "  'gate',\n",
+       "  'open',\n",
+       "  'bottom',\n",
+       "  'away',\n",
+       "  'actually',\n",
+       "  'cheap',\n",
+       "  'worked',\n",
+       "  'getting',\n",
+       "  'ordered',\n",
+       "  'came',\n",
+       "  'milk',\n",
+       "  'bad',\n",
+       "  'part',\n",
+       "  'worth',\n",
+       "  'found',\n",
+       "  'cover',\n",
+       "  'many',\n",
+       "  'design',\n",
+       "  'looking',\n",
+       "  'weeks',\n",
+       "  'say',\n",
+       "  'wanted',\n",
+       "  'look',\n",
+       "  'place',\n",
+       "  'purchase',\n",
+       "  'looks',\n",
+       "  'second',\n",
+       "  'piece',\n",
+       "  'box',\n",
+       "  'pretty',\n",
+       "  'trying',\n",
+       "  'difficult',\n",
+       "  'together',\n",
+       "  'though',\n",
+       "  'give',\n",
+       "  'started',\n",
+       "  'anything',\n",
+       "  'last',\n",
+       "  'company',\n",
+       "  'come',\n",
+       "  'returned',\n",
+       "  'maybe',\n",
+       "  'took',\n",
+       "  'broke',\n",
+       "  'makes',\n",
+       "  'stay',\n",
+       "  'instead',\n",
+       "  'idea',\n",
+       "  'head',\n",
+       "  'said',\n",
+       "  'less',\n",
+       "  'went',\n",
+       "  'working',\n",
+       "  'high',\n",
+       "  'unit',\n",
+       "  'seems',\n",
+       "  'picture',\n",
+       "  'completely',\n",
+       "  'wish',\n",
+       "  'buying',\n",
+       "  'babies',\n",
+       "  'won',\n",
+       "  'tub',\n",
+       "  'almost',\n",
+       "  'either'],\n",
+       " 193)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(important_words, len(important_words))"
+    "important_words = load_important_words()\n",
+    "\n",
+    "important_words, len(important_words)"
    ]
   },
   {
@@ -203,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +458,7 @@
        "[0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ... ]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +489,7 @@
        "2955"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +511,7 @@
        "(9760, 3720)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,22 +558,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def get_numpy_data(data_sframe, features, label):\n",
-    "#     data_sframe['intercept'] = 1\n",
-    "#     features = ['intercept'] + features\n",
-    "#     features_sframe = data_sframe[features]\n",
-    "#     feature_matrix = features_sframe.to_numpy()\n",
-    "#     label_sarray = data_sframe[label]\n",
-    "#     label_array = label_sarray.to_numpy()\n",
-    "#     return(feature_matrix, label_array)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -397,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +605,7 @@
        "((53072, 194), 194)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +650,7 @@
        "array([ 1,  1,  1, ..., -1, -1, -1])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +909,6 @@
     "        for jx in range(len(coeffs)): # loop over each coefficient\n",
     "            # Recall that feature_matrix[:, jx] is the feature column associated with coeffs[j].\n",
     "            # Compute the derivative for coeffs[jx]. Save it in a variable called derivative\n",
-    "            # YOUR CODE HERE\n",
     "            derivative = feature_derivative(errors, feature_matrix[:, jx])\n",
     "            \n",
     "            # add the step size times the derivative to the current coefficient\n",
@@ -764,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -847,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +1026,7 @@
        "         0.01411436, -0.06755923]))"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +1057,7 @@
        "         0.01411436, -0.06755923]))"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +1085,7 @@
        "25126"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +1109,7 @@
        "25126"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +1147,7 @@
        "13169"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1260,7 @@
        " 'daughter']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1125,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1143,7 +1311,7 @@
        " 'monitor']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
