C03/w03: assign. 1 update lambda cond

--- a/C03/w03/C03w03_nb_pa1.ipynb
+++ b/C03/w03/C03w03_nb_pa1.ipynb
@@ -1004,7 +1004,7 @@
       "--------\n",
       "Number of trees                : 1\n",
       "Max tree depth                 : 6\n",
-      "Training time (sec)            : 0.0626\n",
+      "Training time (sec)            : 0.0777\n",
       "Training accuracy              : 0.6406\n",
       "Training log_loss              : 0.6314\n",
       "Training auc                   : 0.6927\n",
@@ -1057,7 +1057,7 @@
       "--------\n",
       "Number of trees                : 1\n",
       "Max tree depth                 : 2\n",
-      "Training time (sec)            : 0.0149\n",
+      "Training time (sec)            : 0.0152\n",
       "Training accuracy              : 0.6135\n",
       "Training log_loss              : 0.6588\n",
       "Training auc                   : 0.6288\n",
@@ -1848,7 +1848,7 @@
       "--------\n",
       "Number of trees                : 1\n",
       "Max tree depth                 : 10\n",
-      "Training time (sec)            : 0.0336\n",
+      "Training time (sec)            : 0.0358\n",
       "Training accuracy              : 0.6655\n",
       "Training log_loss              : 0.6068\n",
       "Training auc                   : 0.7314\n",
@@ -1972,7 +1972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1981,14 +1981,14 @@
        "1656"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "fp = len(list\n",
-    "    (filter(lambda t: t[0] == 1 and t[1] == 1, zip(preds == 1, validation_data['safe_loans'] == -1)))\n",
+    "    (filter(lambda t: t[0] == t[1] == 1, zip(preds == 1, validation_data['safe_loans'] == -1)))\n",
     ")\n",
     "fp"
    ]
@@ -2002,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2011,14 +2011,14 @@
        "1716"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "fn = len(list\n",
-    "    (filter(lambda t: t[0] == 1 and t[1] == 1, zip(preds == -1, validation_data['safe_loans'] == 1)))\n",
+    "    (filter(lambda t: t[0] == t[1] == 1, zip(preds == -1, validation_data['safe_loans'] == 1)))\n",
     ")\n",
     "fn"
    ]
@@ -2036,7 +2036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2045,7 +2045,7 @@
        "50280000"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
