C03/w03: assign. 1 update, assign. 1/Julia

--- a/C03/w03/C03w03_nb_pa1.ipynb
+++ b/C03/w03/C03w03_nb_pa1.ipynb
@@ -731,7 +731,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You should have:\n",
+    "We should have:\n",
     "* Around 81% safe loans\n",
     "* Around 19% risky loans\n",
     "\n",
@@ -1004,7 +1004,7 @@
       "--------\n",
       "Number of trees                : 1\n",
       "Max tree depth                 : 6\n",
-      "Training time (sec)            : 0.0777\n",
+      "Training time (sec)            : 0.0735\n",
       "Training accuracy              : 0.6406\n",
       "Training log_loss              : 0.6314\n",
       "Training auc                   : 0.6927\n",
@@ -1057,7 +1057,7 @@
       "--------\n",
       "Number of trees                : 1\n",
       "Max tree depth                 : 2\n",
-      "Training time (sec)            : 0.0152\n",
+      "Training time (sec)            : 0.015\n",
       "Training accuracy              : 0.6135\n",
       "Training log_loss              : 0.6588\n",
       "Training auc                   : 0.6288\n",
@@ -1732,7 +1732,7 @@
     "\\mbox{accuracy} = \\frac{\\mbox{# correctly classified examples}}{\\mbox{# total examples}}\n",
     "$$\n",
     "\n",
-    "Let us start by evaluating the accuracy of the `small_model` and `decision_tree_model` on the training data"
+    "Let us start by evaluating the accuracy of the `dt_small_model` and `dt_model` on the training data"
    ]
   },
   {
@@ -1848,7 +1848,7 @@
       "--------\n",
       "Number of trees                : 1\n",
       "Max tree depth                 : 10\n",
-      "Training time (sec)            : 0.0358\n",
+      "Training time (sec)            : 0.0341\n",
       "Training accuracy              : 0.6655\n",
       "Training log_loss              : 0.6068\n",
       "Training auc                   : 0.7314\n",
@@ -1862,7 +1862,7 @@
     "                                                          target=target, \n",
     "                                                          features=features, \n",
     "                                                          max_depth=10,\n",
-    "                                                         verbose=False)\n",
+    "                                                          verbose=False)\n",
     "\n",
     "dt_big_model.summary()"
    ]
