--- a/C03/w04/C03w04_nb_pa.ipynb
+++ b/C03/w04/C03w04_nb_pa.ipynb
@@ -715,7 +715,7 @@
    "source": [
     "We then wrote a function `best_splitting_feature` that finds the best feature to split on given the data and a list of features to consider.\n",
     "\n",
-    "cf. include"
+    "cf. import"
    ]
   },
   {
@@ -796,13 +796,13 @@
     "        return create_leaf(target_values)            ## no remaining features to consider => leaf node\n",
     "      \n",
     "    elif current_depth >= max_depth:                 ## Early stopping condition 1: Reached max depth limit.\n",
-    "        if verbose: print(\"Early stopping condition 1 reached. Reached maximum depth.\")\n",
+    "        if verbose: print(\"Early stopping condition 1 reached. Maximum depth.\")\n",
     "        return create_leaf(target_values)            ## If the max tree depth has been reached =>leaf node    \n",
     "      \n",
     "    elif reached_minimum_node_size(data, min_node_size):\n",
     "        ## Early stopping condition 2: \n",
     "        ## If the number of data points is less than or equal to the minimum size, return a leaf.\n",
-    "        if verbose: print(\"Early stopping condition 2 reached. Reached minimum node size.\")\n",
+    "        if verbose: print(\"Early stopping condition 2 reached. Minimum node size.\")\n",
     "        return create_leaf(target_values) \n",
     "    \n",
     "    ## Find the best splitting feature\n",
@@ -830,6 +830,15 @@
     "    if verbose:\n",
     "      print(\"Split on feature %s. (%s, %s)\" % (splitting_feature, len(left_split), len(right_split)))\n",
     "\n",
+    "    # Create a leaf node if the split is \"perfect\"\n",
+    "    if len(left_split) == len(data):\n",
+    "      if verbose: print(\"Creating leaf node.\")\n",
+    "      return create_leaf(left_split[target])\n",
+    "         \n",
+    "    if len(right_split) == len(data):\n",
+    "      if verbose: print(\"Creating leaf node.\")\n",
+    "      return create_leaf(right_split[target])\n",
+    "      \n",
     "    ## Repeat (recurse) on left and right subtrees\n",
     "    l_tree = decision_tree_create(left_split, remaining_features, target, \n",
     "                                  current_depth + 1, max_depth, min_node_size, \n",
@@ -867,19 +876,19 @@
       "Split on feature grade.A. (9122, 101)\n",
       "--------------------------------------------------------------------\n",
       "Subtree, depth = 2 (9122 data points).\n",
-      "Early stopping condition 1 reached. Reached maximum depth.\n",
+      "Early stopping condition 1 reached. Maximum depth.\n",
       "--------------------------------------------------------------------\n",
       "Subtree, depth = 2 (101 data points).\n",
-      "Early stopping condition 1 reached. Reached maximum depth.\n",
+      "Early stopping condition 1 reached. Maximum depth.\n",
       "--------------------------------------------------------------------\n",
       "Subtree, depth = 1 (28001 data points).\n",
       "Split on feature grade.D. (23300, 4701)\n",
       "--------------------------------------------------------------------\n",
       "Subtree, depth = 2 (23300 data points).\n",
-      "Early stopping condition 1 reached. Reached maximum depth.\n",
+      "Early stopping condition 1 reached. Maximum depth.\n",
       "--------------------------------------------------------------------\n",
       "Subtree, depth = 2 (4701 data points).\n",
-      "Early stopping condition 1 reached. Reached maximum depth.\n",
+      "Early stopping condition 1 reached. Maximum depth.\n",
       "Test passed!\n"
      ]
     }
@@ -1052,7 +1061,6 @@
       "Split on grade.B = 0\n",
       "Split on grade.C = 0\n",
       "Split on grade.D = 1\n",
-      "Split on grade.E = 0\n",
       "At leaf, predicting -1\n"
      ]
     },
@@ -1092,7 +1100,6 @@
       "Split on grade.B = 0\n",
       "Split on grade.C = 0\n",
       "Split on grade.D = 1\n",
-      "Split on grade.E = 0\n",
       "At leaf, predicting -1\n"
      ]
     },
@@ -1177,7 +1184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's use this function to evaluate the classification error of `dt6_model` on the **validation_set**."
+    "Now, let's use this function to evaluate the classification error of `dt6_model` on the **validation_data**."
    ]
   },
   {
@@ -1302,7 +1309,7 @@
      "text": [
       "training data, classification error (model 1): 0.4000\n",
       "training data, classification error (model 2): 0.3819\n",
-      "training data, classification error (model 3): 0.3745\n"
+      "training data, classification error (model 3): 0.3762\n"
      ]
     }
    ],
@@ -1328,7 +1335,7 @@
      "text": [
       "validation data, classification error (model 1): 0.3981\n",
       "validation data, classification error (model 2): 0.3838\n",
-      "validation data, classification error (model 3): 0.3800\n"
+      "validation data, classification error (model 3): 0.3773\n"
      ]
     }
    ],
@@ -1376,8 +1383,8 @@
      "output_type": "stream",
      "text": [
       "for model  1 - num of node is:    4\n",
-      "for model  2 - num of node is:   41\n",
-      "for model  3 - num of node is:  341\n"
+      "for model  2 - num of node is:   19\n",
+      "for model  3 - num of node is:   41\n"
      ]
     }
    ],
@@ -1470,8 +1477,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "for model  4 - num of node is:   41\n",
-      "for model  5 - num of node is:   41\n",
+      "for model  4 - num of node is:   19\n",
+      "for model  5 - num of node is:   19\n",
       "for model  6 - num of node is:    1\n"
      ]
     }
@@ -1570,8 +1577,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "for model  7 - num of node is:   41\n",
-      "for model  8 - num of node is:   19\n",
+      "for model  7 - num of node is:   19\n",
+      "for model  8 - num of node is:   12\n",
       "for model  9 - num of node is:    1\n"
      ]
     }
