--- a/C03/w03/C03w03_nb_pa1.ipynb
+++ b/C03/w03/C03w03_nb_pa1.ipynb
@@ -1004,7 +1004,7 @@
       "--------\n",
       "Number of trees                : 1\n",
       "Max tree depth                 : 6\n",
-      "Training time (sec)            : 0.0735\n",
+      "Training time (sec)            : 0.038\n",
       "Training accuracy              : 0.6406\n",
       "Training log_loss              : 0.6314\n",
       "Training auc                   : 0.6927\n",
@@ -1057,7 +1057,7 @@
       "--------\n",
       "Number of trees                : 1\n",
       "Max tree depth                 : 2\n",
-      "Training time (sec)            : 0.015\n",
+      "Training time (sec)            : 0.0159\n",
       "Training accuracy              : 0.6135\n",
       "Training log_loss              : 0.6588\n",
       "Training auc                   : 0.6288\n",
@@ -1303,7 +1303,8 @@
    "outputs": [],
    "source": [
     "# yes as follows:\n",
-    "assert all(map(lambda t: t[0] == t[1], zip(preds_proba >= 0.5, preds == 1)))"
+    "assert len(list(filter(lambda t: t[1] >= 0.5, \n",
+    "                       filter(lambda t: t[0] == 1, zip(preds, preds_proba))))) == len(list(filter(lambda p: p == 1, preds)))"
    ]
   },
   {
@@ -1848,7 +1849,7 @@
       "--------\n",
       "Number of trees                : 1\n",
       "Max tree depth                 : 10\n",
-      "Training time (sec)            : 0.0341\n",
+      "Training time (sec)            : 0.032\n",
       "Training accuracy              : 0.6655\n",
       "Training log_loss              : 0.6068\n",
       "Training auc                   : 0.7314\n",
@@ -2051,8 +2052,8 @@
     }
    ],
    "source": [
-    "fp * 20000 + fn * 10000\n",
-    "# 50,280,000"
+    "cost = fp * 20000 + fn * 10000\n",
+    "cost # 50,280,000"
    ]
   }
  ],
